# bit.transfer

./: .env.example  .gitignore  LICENSE  Makefile  README.md  create-ai-author.py  docker-compose.pi.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.devtools  __main__.py  cli.py  config.py  docker-compose.langfuse.yml  example_agent_usage.py  pyproject.toml
backend/agents/: __init__.py  aggregator.py  article_generator.py  dossier.py  evaluator.py  explorer.py  keyword_extractor.py  orchestrator.py  perspective_search.py  precision_search.py  profile_parser.py  publication_evaluator.py  publication_pipeline.py  research_question.py
backend/agents/skills/openalex-query/: SKILL.md
backend/data/profiles/: elektrotechniker.json  maurer.json  tischler.json
backend/devtools/: langfuse_bridge.py  run_store.py  server.py
backend/devtools/static/: index.html
backend/ghost/: __init__.py  client.py  publisher.py  schemas.py
backend/schemas/: __init__.py  gewerksprofil.py  publication_pipeline.py  research_pipeline.py  search_strategy.py
backend/tests/: test_aggregator.py  test_article_generator.py  test_cli.py  test_cli_e2e.py  test_config.py  test_e2_integration.py  test_evaluator.py  test_explorer.py  test_keyword_extractor.py  test_openalex_costs.py  test_openalex_tools.py  test_orchestrator.py  test_profile_parser.py  test_search_strategy_model.py
backend/tools/: openalex_costs.py  openalex_tools.py  seen_works.py
docs/: Implementierungsplan_MAS_Gewerke_Recherche.docx.md  PRD_Research_Helix_MAS.docx.md
docs/plans/: 2026-03-07-cli-agent-runner-design.md  2026-03-07-cli-agent-runner.md  (+12 more)
ghost/: routes.yaml
nginx/: nginx.conf
(+14 files in other folders)
