[project]
name = "gewerks-backend"
version = "0.1.0"
description = "Backend mit Pydantic-Schemas für Gewerks-Profile"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.36",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
