[project]
name = "gewerks-backend"
version = "0.1.0"
description = "Backend mit Pydantic-Schemas für Gewerks-Profile"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.84.0",
    "langfuse>=3.9.3",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.36",
    "pydantic-settings>=2.13.1",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "pydantic-ai-skills>=0.1.0",
    "pyalex>=0.21",
    "httpx>=0.28.1",
    "pyjwt>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
gewerk-research = "cli:app"

[tool.setuptools]
packages = ["agents", "schemas", "tests"]
py-modules = ["cli", "config"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (require internet, deselect with -m 'not integration')",
]
